# latex-builder

./: .gitignore  CLI_USAGE_EXAMPLES.md  Dockerfile  README.md  action.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: test.yaml
examples/: main.py  test_latex_compile.py
latex_builder/: __init__.py  cli.py  compiler.py  config.py  diff.py  git.py  log.py  revision.py  shell.py
latex_builder/cli/: main.py  parser.py
latex_builder/config/: settings.py
latex_builder/diff/: generator.py
latex_builder/git/: repository.py  revision.py
latex_builder/latex/: processor.py
latex_builder/utils/: command.py  logging.py
tests/: conftest.py  test_cli.py  test_compiler.py  test_config.py  test_diff.py  test_git.py  test_revision.py  test_shell.py
tests/e2e/: test_cli.py
tests/integration/: test_git_operations.py
tests/unit/: test_command.py  test_config.py  test_generator.py  test_logging.py  test_main.py  test_parser.py  test_processor.py  test_repository.py  test_revision.py
