[project]
name = "latex-builder"
version = "0.1.0"
description = "A tool for building LaTeX documents with Git integration and diff generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
    "pygments>=2.19.1",
    "rich>=14.0.0",
    "ruff>=0.11.5",
]

[project.scripts]
latex-builder = "latex_builder.cli.main:main"
