[project]
name = "latex-builder"
version = "0.1.0"
description = "Build LaTeX documents with Git integration and diff generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1.44",
    "semver>=3.0.4",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
latex-builder = "latex_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
