[project]
name = "latex-builder"
version = "0.0.16"
description = "Build LaTeX documents with Git integration and diff generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1.44",
    "semver>=3.0.4",
    "structlog>=24.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
latex-builder = "latex_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.bump-my-version.files]
"pyproject.toml" = [
    'project.version'
]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
